syntax = "proto3";
package monitor.proto;

message MemInfo {
    int64 total = 1;
    int64 free = 2;
    int64 avail= 3;
    int64 buffers = 4;
    int64 cached = 5;
    int64 swap_cached = 6;
    int64 active = 7;
    int64 inactive = 8;
    int64 active_anon = 9;
    int64 inactive_anon = 10;
    int64 active_file = 11;
    int64 inactive_file = 12;
    int64 dirty = 13;
    int64 writeback = 14;
    int64 anon_pages = 15;
    int64 mapped = 16;
    int64 kReclaimable = 17;
    int64 sReclaimable = 18;
    int64 sUnreclaim = 19;
    int32 used_percent = 31;
  }